# chainhook

./: .gitignore  .releaserc  CHANGELOG.md  Cargo.toml  README.md  clarity_repl.js  core-commit.txt  history.txt  snapcraft.yaml  update-vm.sh
.cargo/: config  config.toml
.github/: codecov.yml
.github/workflows/: ci.yaml  open-develop-pr.yaml  pkg-version-bump.yaml
automate/: .env  jest.config.js  package-lock.json  package.json  readme.md  tsconfig.json
automate/script/: index.ts
automate/script/stacks-predicates/: index.ts  predicate-commands.json
automate/script/utils/: helper.ts
components/chainhook-cli/: Cargo.toml
components/chainhook-cli/src/: main.rs
components/chainhook-cli/src/archive/: mod.rs
components/chainhook-cli/src/archive/tests/: mod.rs
components/chainhook-cli/src/cli/: mod.rs
components/chainhook-cli/src/config/: file.rs  generator.rs  mod.rs
components/chainhook-cli/src/config/tests/: mod.rs
components/chainhook-cli/src/config/tests/fixtures/: devnet_chainhook.toml  local_tsv_chainhook.toml  mainnet_chainhook.toml  testnet_chainhook.toml  unsupported_chainhook.toml
components/chainhook-cli/src/hord/: mod.rs
components/chainhook-cli/src/node/: mod.rs
components/chainhook-cli/src/scan/: bitcoin.rs  bitcoin_db.rs  common.rs  mod.rs  stacks.rs
components/chainhook-cli/src/scan/tests/: mod.rs
components/chainhook-cli/src/service/: http_api.rs  mod.rs  runloops.rs
components/chainhook-cli/src/service/tests/: helpers.rs  mod.rs  observer_tests.rs  runloop_tests.rs
components/chainhook-cli/src/service/tests/helpers/: build_predicates.rs  mock_bitcoin_rpc.rs  mock_service.rs  mock_stacks_node.rs  mod.rs
components/chainhook-cli/src/storage/: mod.rs  signers.rs  sqlite.rs
components/chainhook-cli/tmp/: Chainhook.toml
components/chainhook-cli/wix/: main.wxs
components/chainhook-event-observer/: Cargo.toml
components/chainhook-sdk/: Cargo.toml
components/chainhook-sdk/src/: lib.rs  monitoring.rs
components/chainhook-sdk/src/chainhooks/: mod.rs  types.rs
components/chainhook-sdk/src/chainhooks/bitcoin/: mod.rs  tests.rs
components/chainhook-sdk/src/chainhooks/bitcoin/tests/: hook_spec_validation.rs
components/chainhook-sdk/src/chainhooks/stacks/: mod.rs
components/chainhook-sdk/src/chainhooks/stacks/tests/: hook_spec_validation.rs
components/chainhook-sdk/src/chainhooks/tests/: mod.rs
components/chainhook-sdk/src/chainhooks/tests/fixtures/: mod.rs
components/chainhook-sdk/src/chainhooks/tests/fixtures/stacks/testnet/: 20835.json  20898.json  occurrence.json
components/chainhook-sdk/src/chainhooks/tests/fixtures/stacks/testnet/base/: transaction_contract_deploy.json
components/chainhook-sdk/src/chainhooks/types/: bitcoin.rs  mod.rs  stacks.rs
components/chainhook-sdk/src/dispatcher/: mod.rs  multi_threaded.rs  single_threaded.rs
components/chainhook-sdk/src/hord/: mod.rs
components/chainhook-sdk/src/hord/db/: mod.rs
components/chainhook-sdk/src/indexer/: fork_scratch_pad.rs  mod.rs
components/chainhook-sdk/src/indexer/bitcoin/: blocks_pool.rs  mod.rs  tests.rs
components/chainhook-sdk/src/indexer/stacks/: blocks_pool.rs  mod.rs  tests.rs
components/chainhook-sdk/src/indexer/tests/: mod.rs
components/chainhook-sdk/src/indexer/tests/helpers/: mod.rs  stacks_blocks.rs  stacks_events.rs  stacks_shapes.rs  transactions.rs
components/chainhook-sdk/src/observer/: http.rs  mod.rs  zmq.rs
components/chainhook-sdk/src/observer/config/: mod.rs
components/chainhook-sdk/src/observer/stacks/: http.rs  mod.rs
components/chainhook-sdk/src/observer/tests/: mod.rs
components/chainhook-sdk/src/utils/: mod.rs
components/chainhook-types-js/src/: index.ts
components/chainhook-types-rs/: Cargo.toml
components/chainhook-types-rs/src/: events.rs  lib.rs  ordinals.rs  rosetta.rs  signers.rs
components/client/typescript/: jest.config.js  package-lock.json  package.json  tsconfig.json
dockerfiles/: docker-compose.dev.yml
dockerfiles/components/: chainhook-node.dockerfile
docs/: chainhook-openapi.json  faq.md  getting-started.md  index.html  overview.md
docs/how-to-guides/: how-to-run-chainhook-as-a-service-using-bitcoind.md  how-to-run-chainhook-as-a-service-using-stacks.md  how-to-use-chainhook-with-bitcoin.md  how-to-use-chainhook-with-stacks.md  how-to-use-chainhooks-with-bitcoin.md  how-to-use-chainhooks-with-stacks.md  run-chainhook-as-a-service-using-bitcoind.md  run-chainhook-as-a-service-using-stacks.md  run-chainhooks-as-a-service-using-bitcoind.md
docs/images/predicate-status-flowchart/: PredicateStatusFlowchart.excalidraw
examples/arkadiko-data-indexing/: README.md
examples/arkadiko-data-indexing/vault-monitor/: Gemfile
src/: bin.rs  kernel.rs  lib.rs  macros.rs
src/analysis/: annotation.rs  ast_dependency_detector.rs  ast_visitor.rs  call_checker.rs  contract_call_detector.rs  dependency_detector.rs  mod.rs
src/analysis/check_checker/: mod.rs
src/analysis/taint_checker/: mod.rs
src/clarity/: callables.rs  clarity.rs  contexts.rs  contracts.rs  coverage.rs  debug.rs  diagnostic.rs  errors.rs  events.rs  mod.rs  representations.rs  variables.rs
src/clarity/analysis/: analysis_db.rs  errors.rs  mod.rs  types.rs
src/clarity/ast/: errors.rs  mod.rs  stack_depth_checker.rs  types.rs
src/clarity/codec/: macros.rs  mod.rs  transaction.rs
src/clarity/costs/: cost_functions.rs  mod.rs
src/clarity/database/: clarity_db.rs  datastore.rs  key_value_wrapper.rs  marf.rs  sqlite.rs  structures.rs
src/clarity/debug/: cli.rs  mod.rs
src/clarity/docs/: contracts.rs  mod.rs
src/clarity/functions/: arithmetic.rs  assets.rs  boolean.rs  crypto.rs  database.rs  define.rs  mod.rs  options.rs  (+3 more)
src/contracts/: costs-v2.clar  mod.rs
src/frontend/: mod.rs  terminal.rs
src/repl/: command.rs  interpreter.rs  mod.rs  session.rs  settings.rs  tracer.rs
tests/: Chainhook.toml
tests/automation/: package-lock.json  playwright.config.js
tests/integration-tests/: .env  .gitignore  Chainhook.toml  package-lock.json  package.json  readme.md  tsconfig.json
wix/: main.wxs
(+134 files in other folders)
