[workspace]
members = [
    "components/chainhook-sdk",
    "components/chainhook-cli",
    "components/chainhook-types-rs",
]
default-members = ["components/chainhook-cli", "components/chainhook-sdk"]
resolver = "2"

[patch.crates-io]
stacks-codec = { git = "https://github.com/hirosystems/clarinet.git", rev = "036304286cdfede81cb78f66db2b9af9d24254a7" }
