[workspace]
members = [
    "components/chainhook-sdk",
    "components/chainhook-cli",
    "components/chainhook-types-rs",
]
default-members = ["components/chainhook-cli", "components/chainhook-sdk"]
resolver = "2"

[patch.crates-io]
stacks-codec = { git = "https://github.com/hirosystems/clarinet.git", rev = "d5e3599d6f541fd82f3bc94bfc81211419b9938d" }
