[workspace]
members = [
    "components/chainhook-sdk",
    "components/chainhook-cli",
    "components/chainhook-types-rs",
]
default-members = ["components/chainhook-cli", "components/chainhook-sdk"]
resolver = "2"

[patch.crates-io]
stacks-codec = { git = "https://github.com/hirosystems/clarinet.git", version = "3.2.0", rev = "116137316023ae912848a1ee1845fed30b306fdc" }
