[package]
name = "chainhook"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
num_cpus = "1.16.0"
serde = "1"
serde_json = "1"
serde_derive = "1"
redis = "0.21.5"
serde-redis = "0.12.0"
hex = "0.4.3"
rand = "0.8.5"
chainhook-sdk = { version = "0.12.1", default-features = false, features = [
    "zeromq",
], path = "../chainhook-sdk" }
hiro-system-kit = "0.3.1"
# clarinet-files = { path = "../../../clarinet/components/clarinet-files" }
# hiro-system-kit = { path = "../../../clarinet/components/hiro-system-kit" }
clap = { version = "3.2.23", features = ["derive"], optional = true }
clap_generate = { version = "3.0.3", optional = true }
toml = { version = "0.5.6", features = ["preserve_order"], optional = true }
ctrlc = { version = "3.2.2", optional = true }
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "stream",
    "json",
    "rustls-tls",
] }
tokio = { version = "=1.24", features = ["full"] }
futures-util = "0.3.24"
flate2 = "1.0.24"
tar = "0.4.38"
flume = "0.10.14"
ansi_term = "0.12.1"
atty = "0.2.14"
crossbeam-channel = "0.5.8"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
threadpool = "1.8.1"
rocket_okapi = { version = "0.8.0-rc.3", git = "https://github.com/hirosystems/okapi.git", branch = "feat-chainhook-fixes" }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }

[dependencies.rocksdb]
version = "0.20.1"
default-features = false
features = ["lz4", "snappy"]

[dev-dependencies]
criterion = "0.3"
redis = "0.21.5"
clarity-vm = "=2.1.1"
hex = "0.4.3"
test-case = "3.1.0"
serial_test = "2.0.0"


[features]
default = ["cli"]
cli = ["clap", "clap_generate", "toml", "ctrlc", "release"]
debug = ["chainhook-sdk/debug"]
release = ["chainhook-sdk/release"]
redis_tests = []

# [patch.crates-io]
# raft-proto = { git = "https://github.com/tikv/raft-rs", rev="95c532612ee6a83591fce9a8b51d6afe87b58835"}
